<resources>
    <string name="app_name">RongXin</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Please enter the account</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">error_invalid_email</string>
    <string name="error_invalid_password">error_invalid_password</string>
    <string name="error_empty_password">error_empty_password</string>
    <string name="error_incorrect_password">error_incorrect_password</string>
    <string name="error_field_required">error_field_required</string>
    <string name="register_user">register_user</string>
    <string name="forget_password">forget_password</string>
    <string name="login_tips">Login Success</string>

    <!--首页数据-->
    <string name="Usage">Usage</string>
    <string name="MaskFit">MaskFit</string>
    <string name="Event">Event</string>
    <string name="Humidifier">Humidifier</string>
    <string name="Maximum">Maximum</string>
    <string name="th95_Percentile">95th Percentile</string>
    <string name="Median">Median</string>
    <string name="Pressure">Pressure</string>
    <string name="cmH2O">cmH2O</string>
    <!--侧滑菜单栏-->
    <string name="MyDevice">My Device</string>
    <string name="MyAccessory">My Accessory</string>
    <string name="MessageCenter">Message Center</string>
    <string name="Settings">Settings</string>
    <string name="FAQ">FAQ</string>
    <string name="About">About</string>
    <string name="SignOut">Sign Out</string>

    <string name="left_name" formatted="false">%1s.%2s</string>

    <!--帮助中心-->
    <string name="HelpCenter">Help Center</string>

    <!--病人列表-->
    <string name="patientlist_ageandsex" formatted="false">%2s/%1s</string>
    <string name="patientlist_id" formatted="false">ID:%1s</string>
    <string name="patientlist_update" formatted="false">%1s</string>
    <string name="search">search</string>
    <string name="PatientList">Patient List</string>
    <string name="search_content">Please input search content</string>
    <string name="commonproblem">Common problem</string>

    <!--消息列表-->
    <string name="send">send</string>
    <string name="MessageList">Message List</string>
    <string name="messagecontent_tips">The message content is empty</string>

    <!--睡眠排行-->
    <string name="SleepQualityRankings">Sleep Quality Rankings</string>

    <!--用户信息-->
    <string name="MyInfo">My Info</string>
    <string name="album">album</string>
    <string name="photograph">photograph</string>
    <string name="cancel">cancel</string>
    <string name="avatar_upLoad_Tips_success">Avatar uploaded successfully</string>
    <string name="avatar_upLoad_Tips_fail">Avatar uploaded failure</string>
    <string-array name="Sexs">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="unit">
        <item>/YEAR</item>
        <item>/CM</item>
        <item>/KG</item>
    </string-array>
    <string-array name="patient_info">
        <item>ID:</item>
        <item>Name:</item>
        <item>Sex:</item>
        <item>Age:</item>
        <item>Height:</item>
        <item>Weight:</item>
        <item></item>
        <item>Phone:</item>
        <item>Email:</item>
        <item>Instant Messaging Account</item>
        <item></item>
        <item>Treating Doctor ID:</item>
        <item>Institutuin ID:</item>
    </string-array>
    <string-array name="doctor_info">
        <item>ID:</item>
        <item>Name:</item>
        <item></item>
        <item>Department:</item>
        <item>Phone:</item>
        <item>Institutuin ID:</item>
    </string-array>

    <!--我的设备-->
    <!--<string name="MyDevice">My Device</string>-->
    <string name="Model">Model:</string>
    <string name="SN">SN:</string>
    <string name="Initialwificonnection">Initial wifi connection</string>
    <string name="Uploadtherapydata">Upload therapy data</string>
    <string name="dialogcontent">Open the bluetooth allows\"Resvent\" connect to the accessories.</string>
    <string name="Setting">Setting</string>
    <string name="No_update">No update</string>
    <string name="ble_not_supported">Does not support bluetooth 4.0</string>
    <string name="open_ble">Open the bluetooth</string>
    <string name="is_open_ble">Whether to open the bluetooth</string>
    <string name="Opening_the_bluetooth">Opening the bluetooth</string>

    
    <!--WiFi设置-->
    <string name="wifisettingtips1">1.Please start up your device.</string>
    <string name="wifisettingtips2">2.Enter Setting menu on device.</string>
    <string name="wifisettingtips3">3.Press Blue Network button.</string>
    <string name="next">Next</string>

    <!--确认设置wifi-->
    <string name="Confirm_Wifi_Info">Confirm WiFi Info</string>
    <string name="Wi_Fi">Wi-Fi:</string>
    <string name="Please_input_wifi_password">Please input wifi password</string>
    <string name="Searching_Device">Searching Device</string>
    <string name="Confirm_Wifi_Info_tips">Not Support 5G Wi-Fi Suggest to connect other Wi-Fi</string>
    <string name="wifi_name_enter">Please enter the name of wifi</string>
    <string name="wifi_password_enter">Please enter the wifi password</string>

    <!--设置wifi-->
    <string-array name="Connecting_Wifi">
        <item>Searching device...</item>
        <item>Connecting device...</item>
        <item>Discover service...</item>
        <item>Sending wifi to device...</item>
        <item>Initializing WiFi connection success...</item>
    </string-array>
    <string name="Searching_device...">Searching device...</string>
    <string name="Connecting_device...">Connecting device...</string>
    <string name="Sending_wifi_to_device...">Sending wifi to device...</string>
    <string name="Initializing_WiFi_connection_success...">Initializing WiFi connection success...</string>

    <!--设置-->
    <string name="Unit">Unit</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <!--<string name="Pressure">Pressure</string>-->
    <string name="Leak_Flow">Leak/Flow</string>
    <string name="Time">Time</string>
    <string name="Format">Format</string>
    <string name="Check_for_update">Check for update</string>
    <string-array name="height">
        <item>CM</item>
        <item>IN</item>
    </string-array>
    <string-array name="weight">
        <item>KG</item>
        <item>LB</item>
    </string-array>
    <string-array name="pressure">
        <item>HPA</item>
        <item>MBR</item>
        <item>CMH20</item>
    </string-array>
    <string-array name="leak_flow">
        <item>L/SEC</item>
        <item>L/MIN</item>
    </string-array>
    <string-array name="format">
        <item>AM/PM</item>
        <item>24HOUR</item>
    </string-array>

    <!--关于我们-->
    <string name="Resvent_Medical">Resvent Medical %s</string>
    <string name="copyright">Copyright©2016 Resvent Medical Technology CO.,Ltd.</string>

    <!--用户注册-->
    <string name="Registration">Registration</string>
    <string name="create">Create a new account</string>
    <string name="select_type">Please select your account type:</string>
    <string name="doctor">I\'m a doctor</string>
    <string name="patient">I\'m a patient</string>
    <string name="please_input_info">Please input your information</string>
    <string name="password_notiry">8-16characters</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="institution">Institution*</string>
    <string name="organization_type">Organization Type*</string>
    <string name="job_title">Job Title*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="country">Country*</string>
    <string name="gender">Gender*</string>
    <string name="date_birth">Date of birth*</string>
    <string name="device_model">Device Model*</string>
    <string name="serial_num">Serial Number*</string>

    <!--找回密码-->
    <string name="find_password_hint">Enter your user name and email address and we\'ll email you a link to reset your password.</string>
    <string name="user_name">User Name*</string>
    <string name="email_address">Email_address*</string>
    <string name="find_password">Find Password</string>
    <string name="phone_num">You phone number</string>
    <string name="veification_code">Veification Code</string>
    <string name="veification">Veification</string>
    <string name="no_phone_Tips">Please enter the phone number</string>
    <string name="no_vericode_Tips">Please enter validation code</string>
    <string name="vericode_error_Tips">Verification code error</string>
    <string name="phone_error_Tips">Cell phone number wrong</string>
    <string name="password">password*</string>
    <string name="confirm_password">confirm password*</string>
    <string name="submit">Submit</string>

    <!--结果-->
    <string name="modify_success" >Submit successfully</string>
    <string name="modify_hint" >We just emailed you,please check later.</string>
    <string name="modify_title" >Forget Password</string>

    <!--提示-->
    <string name="forget_name">The name cannot be empty</string>
    <string name="forget_passWord">Password cannot be empty</string>
    <string name="forget_ming">First cannot be empty</string>
    <string name="forget_xing">Last name cannot be empty</string>
    <string name="forget_gender">Gender cannot be empty</string>
    <string name="forget_dateBirth">Date of birth can not be empty</string>
    <string name="forget_email">Email can not be empty</string>
    <string name="forget_phone">Phone can not be empty</string>
    <string name="forget_city">City can not be empty</string>
    <string name="forget_deviceModel">Device model can not be empty</string>
    <string name="forget_num">No. can not be empty</string>
    <string name="forget_num_err">Number fill in error</string>
    <string name="forget_passWord_err">Password too short</string>
    <string name="forget_passWord_long">The password is too long</string>
    <string name="forget_phone_err">Phone error</string>
    <string name="forget_email_err">Email error</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="password_err">Two password input inconsistent!</string>
    <string name="hint_err">Failed to get the data</string>
    <string name="hint_succss">Registered successfully</string>
    <string name="organization_err">Tissue types cannot be empty</string>
    <string name="position_err">Post cannot be empty</string>
    <string name="name_short">Name is too short</string>
    <string name="name_long">Name is too long</string>
    <string name="service_err">Service problems</string>
    <string name="device">Device</string>
    <string name="device_list">Device list</string>
    <string-array name="device_filter"><item>iBreeze CPAP</item><item>iBreeze BPAP</item><item>resvent</item></string-array>

    <string-array name="week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="weeks">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thurs</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

</resources>
