<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/backColor"
    android:orientation="vertical"
    android:padding="@dimen/dimen_5">


    <TextView
        android:id="@+id/select_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/album"
        android:paddingLeft="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_15"
        android:textSize="@dimen/textsize_22"
        android:textColor="@color/thinThemeColor"
        android:background="@drawable/blue_bg"/>

    <TextView
        android:id="@+id/select_photograph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/photograph"
        android:layout_marginTop="3dp"
        android:paddingLeft="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_15"
        android:textSize="@dimen/textsize_22"
        android:textColor="@color/thinThemeColor"
        android:background="@drawable/blue_bg"/>

    <TextView
        android:id="@+id/select_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cancel"
        android:layout_marginTop="3dp"
        android:paddingLeft="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_15"
        android:textSize="@dimen/textsize_22"
        android:textColor="@color/gray_left"
        android:background="@drawable/blue_bg"/>

</LinearLayout>
