<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    android:orientation="vertical">

    <include layout="@layout/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20">

        <EditText
            android:id="@+id/phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_8"
            android:hint="@string/phone_num"
            android:inputType="number"
            android:layout_marginTop="@dimen/dimen_10"
            android:singleLine="true"
            android:background="@drawable/edit_dark_bg"
            android:drawablePadding="@dimen/dimen_10"
            android:textSize="@dimen/textsize_16"
            android:drawableLeft="@mipmap/phone_num"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_8"
                android:layout_marginRight="@dimen/dimen_15"
                android:singleLine="true"
                android:inputType="number"
                android:hint="@string/veification_code"
                android:background="@drawable/edit_dark_bg"
                android:drawablePadding="@dimen/dimen_10"
                android:drawableLeft="@mipmap/phone_code"
                android:textSize="@dimen/textsize_16"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/verification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/veification"
                android:gravity="center"
                android:clickable="true"
                android:background="@drawable/verification_press"
                android:textColor="@color/thinThemeColor"
                android:textSize="@dimen/textsize_18"
                android:layout_weight="3"/>

        </LinearLayout>

        <TextView
            android:id="@+id/findpassword_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_30"
            android:background="@drawable/button_themecolor"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_18"/>

    </LinearLayout>
</LinearLayout>
